--- a/src/components/agent/agent.scss
+++ b/src/components/agent/agent.scss
@@ -13,12 +13,14 @@
   	font-size: 18px;
   	font-weight: bold;
   	left: 10px;
+  	color: #fff;
   }
   .status-number{
   	position: absolute;
   	bottom: 20px;
   	font-size: 48px;
   	right: 15px;
+	color: #fff;
   }
 }
 
@@ -33,6 +35,7 @@
 		height: 100%;
 		line-height: 30px;
 		display: block;
+		border-right:1px solid #E1E4E6;
 		text-align: center;
 		list-style: none;
 		&:hover {
@@ -53,6 +56,7 @@
 		margin-top: 30px;
 		.type-name{
 			font-size: 12px;
+			display:inline-block;
 			margin-left: 20px;
 		}
 		.type-number{
@@ -61,5 +65,59 @@
 			right: 30px;
 		}
 	}
+}
+
+.ant-spin{
+    position: relative;
+    left: 50%;
+    margin-left: -32px;
+    margin-top: 28px;
+}
+
+.loading-container{
+	position: relative;
+	width: 100%;
+	height: 100%;
+	.loading-background{
+		position: absolute;
+		width: 100%;
+		height: 100%;
+		opacity: 0.3;
+		background: black;
+		z-index: 13;
+}
+
+}
+.building-container{
+	background:#FF9A2A
+}
+.idle-container{
+	background:#7FBC39
+}
+.gear-rotate{
+    opacity: 0.3;
+    position: absolute;
+    top: 0;
+    left: 50%;
+    margin-left: -100px;
+    animation:rotate 2s linear infinite;
+}
+@mixin keyframes($animationName) {
+    @-webkit-keyframes #{$animationName} {
+        @content;
+    }
+    @-moz-keyframes #{$animationName} {
+        @content;
+    }
+    @-o-keyframes #{$animationName} {
+        @content;
+    }
+    @keyframes #{$animationName} {
+        @content;
+    }
+}
+@include keyframes(rotate) {
+	from{transform: rotate(0deg)}
+	to{transform: rotate(359deg)}
 }
 
